--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -56,14 +56,21 @@
 
 		.output {
 			position: absolute;
-			top: 35%;
+			top: 70%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+
+		.output2 {
+			position: absolute;
+			top: 90%;
 			left: 50%;
 			transform: translate(-50%, -50%);
 		}
 
 		.userInput {
 			position: absolute;
-			top: 50%;
+			top: 20%;
 			left: 50%;
 			width: 30%;
 			padding: 12px 20px;
@@ -77,7 +84,7 @@
 
 		.f1-submit {
 			position: absolute;
-			top: 60%;
+			top: 30%;
 			left: 50%;
 			display: inline-block;
 			padding: 12px 20px;
