--- a/views/partials/output2.hbs
+++ b/views/partials/output2.hbs
@@ -1,7 +1,8 @@
 <div id="f1-div" >
 	<form id="user-input" method="POST" action="/feature2">
-		<input type="text" id="userInput" class="userInput" name="input" placeholder="Enter Input Here">
+		<input type="text" id="userInput" class="userInput" name="input" placeholder="Enter Number Here">
 		<input type="submit" value="Submit" class="f1-submit">
 	</form>
+	<img src="{{image}}" class="output" id="output">
 	<p class="output" id="output">{{output}}</p>
 </div>
