--- a/views/partials/output1.hbs
+++ b/views/partials/output1.hbs
@@ -1,9 +1,9 @@
 <div id="f1-div" >
 	<form id="user-input" method="POST" action="/feature1">
-		<input type="text" id="userInput" class="userInput" name="input" placeholder="Enter a city">
+		<input type="text" id="userInput" class="userInput" name="input" placeholder="Enter input">
 		<input type="submit" value="Submit" class="f1-submit">
 	</form>
 	<img src="{{image}}" class="output" id="output"><br>
-	<img src="{{image2}}" class="output2" id="output"><br>
+	<img src="{{image}}" class="output2" id="output"><br>
 	<p class="output">{{output}}</p>
 </div>
