--- a/views/partials/output2.hbs
+++ b/views/partials/output2.hbs
@@ -4,6 +4,6 @@
 		<input type="submit" value="Submit" class="f1-submit">
 	</form>
 	<img src="{{image}}" class="output" id="output">
-	<img src="{{image2}}" class="output2" id="output"><br>
+	<img src="https://deckofcardsapi.com/static/img/0D.png" class="output2" id="output"><br>
 	<p class="output" id="output">{{output}}</p>
 </div>
