--- a/views/partials/output2.hbs
+++ b/views/partials/output2.hbs
@@ -5,5 +5,7 @@
 	</form>
 	<img src="{{image}}" class="output" id="output">
 	<img src="https://deckofcardsapi.com/static/img/0D.png" class="output2" id="output"><br>
+	<img src="https://deckofcardsapi.com/static/img/KS.png" class="output2" id="output"><br>
+	
 	<p class="output" id="output">{{output}}</p>
 </div>
