--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -68,6 +68,13 @@
 			transform: translate(-50%, -50%);
 		}
 
+		.output3 {
+			position: absolute;
+			top: 100%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+
 		.userInput {
 			position: absolute;
 			top: 20%;
